--- a/Avalonche/Turbulence.csproj
+++ b/Avalonche/Turbulence.csproj
@@ -6,10 +6,11 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<PlatformTarget>x64</PlatformTarget>
-		<BaseOutputPath>C:\Users\choij\OneDrive\바탕 화면\Turbulence_build</BaseOutputPath>
+		<BaseOutputPath>C:\projects\source\repos\Avalonche\Avalonche\bin</BaseOutputPath>
 		<Configurations>Debug;Release</Configurations>
 		<Deterministic>true</Deterministic>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug'">
@@ -17,6 +18,7 @@
 		<DebugType>full</DebugType>
 		<Deterministic>true</Deterministic>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release'">
